crates/aranya-policy-lang/tests/data/invalid_dot.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
6 |     return f.1
  |              ^ expected identifier
